--- a/index.html
+++ b/index.html
@@ -2,63 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+<link rel="stylesheet" href="style.css">
+  
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+<section>
+  <button>Try It Free</button>
 
-  Try It Free
+  <h1>Build The Community Your Fans Will Love</h1> 
+ 
+   <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+     Create connections with your users as you engage in genuine discussion.</p> 
+ 
+  <button>Get Started For Free</button> 
 
-  Build The Community Your Fans Will Love
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+</section>
+ 
+<div class="grow">
+  <h3>Grow Together</h3> 
 
-  Get Started For Free
+  <p>
+   Generate meaningful discussions with your audience and build a strong, loyal community. 
+   Think of the insightful conversations you miss out on with a feedback form.
+  </p>  
+ 
+</div>
+ 
+<div class="flow">
+  <h3>Flowing Conversations</h3> 
 
-  Grow Together
+  <p>
+   You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+   have just-in-time loading for a more natural flow.
+  </p> 
+</div>
+ 
+<div class="user">
+  <h3> Your Users</h3>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+  <p>
+   It takes no time at all to integrate Huddle with your app's authentication solution. 
+   This means, once signed in to your app, your users can start chatting immediately.
+  </p> 
+</div>
+ 
 
-  Flowing Conversations
+ <h3>Ready To Build Your Community?</h3> 
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
+<button> Get Started For Free</button> 
 
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
+ <p>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
   incididunt ut labore et dolore magna aliqua
+ </p> 
 
-  +1-543-123-4567
-  example@huddle.com
+  <p>+1-543-123-4567</p>
+  <p>example@huddle.com</p>
 
-  About Us
-  What We Do
-  FAQ
+  <p>About Us</p>
+ <p>What We Do</p>
+ <p> FAQ</p>
 
-  Career
-  Blog
-  Contact Us
+ <p>Career</p> 
+  <p>Blog</p>
+  <p>Contact Us</p>
 
-  &copy; Copyright 2018 Huddle. All rights reserved.
+  <p>Copyright 2018 Huddle. All rights reserved.</p> 
 
   <footer>
     <p class="attribution">
